[package]
name = "game-night"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
diesel = { version = "2.1.0", features = ["postgres","r2d2"] }
dotenvy = "0.15"
deadpool-postgres = "0.10.5"
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.19"

[dev-dependencies]
cargo-husky = { version = "1.5.0",  features = ["run-cargo-clippy"] }
